- Add macros for event tables for missing wxWebView events (PB, #22949).
- Improve month selection in wxGenericCalendarCtrl (Lauri Nurmi, #22853).
- Fix maximum length of wxPropertyGrid editors (#23033).
- Add support for Caps/Num/Scroll Lock to wxGetKeyState() (elfmz, #23195).
- Fix wxToolBar::GetToolBitmapSize() in high DPI under non-MSW (#23222).

wxGTK:

- Fix resizing wxGLCanvas with EGL and Wayland (Carl Hetherington, #22811).
- Fix missing X11 libraries when linking with wxGTK2 statically (#22813).
- Fix compilation with GTK 3.22.z and z < 25 (#22816).
- Fix compilation with GTK < 2.21.8 (mkirkham, #22830).
- Fix display artefacts when using AUI without compositor under X11 (#23135).
- Allow selecting and copying text in wxMessageDialog (Ian McInerney, #23039).
- Fix initial size of top-level window on Wayland (#23041).
- Improve size and behaviour of in-place editor in wxTreeCtrl (taler21, #23001).
- Also improve size compuation of wxTextCtrl (Alex Shvartzkop, #23610).
- Fix missing borders for scrollable windows, e.g. wxListCtrl (#23236).
- Fix TAB navigation in wxPropertyGrid (Adrian Lopez, #23354).
- Fix GSource leak when using wxIdleEvent::RequestMore() (#23364).

wxMSW:

- Fix crashes when using wxTextCtrl with MinGW TDM 64 (#22639).
- Avoid appending extraneous NUL bytes to wxTextDataObject text (#22928).
- Improve resizing of some windows on DPI change (#23091).
- Fix wrong size of native MSW icons in wxArtProvider in high DPI (#23127).
- Fix glitch in drawing wxStaticBox with a control as label (#22952).
- Save windows geometry correctly when using Aero Snap (Randalphwa, #22730).
- Fix generating wxEVT_TEXT_ENTER in wxBitmapComboBox (#16318).
- Fix return value of wxZoomGestureEvent::GetZoomFactor() (s-murphree, #22818).
- Update top level icon resolution on DPI change (#22807).
- Fix scaling of standard MSW icons in high DPI (#23031).
- Fix menu items with custom font in high DPI (#22957).